clase 6, contactenacion de cadena en js parte 1 y 2

--- a/Leandro Eugenio/laboratorio java script/leccion2/index.html
+++ b/Leandro Eugenio/laboratorio java script/leccion2/index.html
@@ -6,7 +6,7 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script src="02-01-TipoDeDatos.js"></script>
+    <script src="02-01-ConcatenacionDeCadenas.js"></script>
     
 </body>
 </html>
