--- a/Alan/Javascript2023/leccion02/index.html
+++ b/Alan/Javascript2023/leccion02/index.html
@@ -6,7 +6,7 @@
     <title>Javascript</title>
 </head>
 <body>
-    <script src="02-01-TiposDatos.js">
+    <script src="02-01-ConcatenacionDeCadenas.js">
 
     </script>
 </body>
