--- a/German Castillo/JavaScript/Leccion4/index.html
+++ b/German Castillo/JavaScript/Leccion4/index.html
@@ -6,6 +6,6 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script src="04-01-Ejercicios.js"></script>
+    <script src="Ejercicios.js"></script>
 </body>
 </html>
